[workspace]
resolver = "2"
members = ["derive"]

[workspace.package]
edition = "2024"
authors = ["Lexo Liu <me@lexo.cool>"]
description = "A powerful, lightweight reactive framework."
repository = "https://github.com/water-rs/nami"
homepage = "https://github.com/water-rs/nami"

license = "MIT"
readme = "README.md"

[workspace.dependencies]
nami-derive = { path = "derive", version = "0.2.0" }

[package]
name = "nami"
version = "0.6.1"
edition.workspace = true
authors.workspace = true
description = "A powerful, lightweight reactive framework."
repository.workspace = true
documentation = "https://docs.rs/nami"
homepage.workspace = true
license.workspace = true
keywords = ["reactive", "binding", "observer", "state"]
categories = ["gui", "data-structures", "embedded", "wasm", "rust-patterns"]
readme.workspace = true

[badges]
maintenance = { status = "actively-developed" }
license = { file = "LICENSE" }

[dependencies]
paste = "1.0"
log = "0.4.28"
nami-derive = { version = "0.2.0", optional = true}
futures-core = "0.3.31"
pin-project-lite = "0.2.16"
executor-core = {version = "0.6.0", features = ["std"]}
async-channel = "2.5.0"
async-io = { version = "2.5.0", optional = true }


[dev-features]
waterui-str = "0.1.0"

[features]
default = ["derive", "io"]
io = ["dep:async-io"]
derive = ["dep:nami-derive"]