[workspace]
resolver = "2"
members = ["core","derive"]

[workspace.package]
edition = "2024"
authors = ["Lexo Liu <me@lexo.cool>"]
description = "A powerful, lightweight reactive framework."
repository = "https://github.com/water-rs/nami"
homepage = "https://github.com/water-rs/nami"
keywords = ["reactive", "binding", "observer", "state"]
categories = ["gui", "data-structures", "embedded", "wasm", "rust-patterns"]
license = "MIT"
readme = "README.md"

[workspace.dependencies]
nami-derive = { path = "derive", version = "0.2.0" }
nami-core = { path = "core", version = "0.1.0" }
[package]
name = "nami"
version = "0.6.2"
edition.workspace = true
authors.workspace = true
description = "A powerful, lightweight reactive framework."
repository.workspace = true
documentation = "https://docs.rs/nami"
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[badges]
maintenance = { status = "actively-developed" }
license = { file = "LICENSE" }

[dependencies]
paste = "1.0"
log = "0.4.28"
nami-derive = { version = "0.2.0", optional = true }
futures-core = "0.3.31"
pin-project-lite = "0.2.16"
executor-core = { version = "0.6.0" }
async-channel = "2.5.0"
nami-core.workspace = true

[features]
std = ["executor-core/std"]
default = ["derive", "timer"]
timer = ["std","dep:async-io","dep:gloo-timers"]
derive = ["dep:nami-derive"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-io = { version = "2.5.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"], optional = true }

[workspace.lints]
rust.missing_docs = "warn"
rust.missing_debug_implementations = "warn"
clippy.all = "warn"
clippy.style = "warn"
clippy.correctness = "warn"
clippy.complexity = "warn"
clippy.suspicious = "warn"
clippy.perf = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
clippy.cargo = "warn"
clippy.multiple_crate_versions =  { level = "allow", priority = 1 }

[lints]
workspace = true