[workspace]
resolver = "2"
members = ["core","derive"]

[workspace.package]
edition = "2024"
authors = ["Lexo Liu <me@lexo.cool>"]
description = "A powerful, lightweight reactive framework."
repository = "https://github.com/water-rs/nami"
homepage = "https://github.com/water-rs/nami"
keywords = ["reactive", "binding", "observer", "state"]
categories = ["gui", "data-structures", "embedded", "wasm", "rust-patterns"]
license = "MIT"
readme = "README.md"

[workspace.dependencies]
nami = { path = ".", version = "0.10.0" }
nami-derive = { path = "derive", version = "0.2.2" }
nami-core = { path = "core", version = "0.3.2", default-features = false }

[package]
name = "nami"
version = "0.10.0"
edition.workspace = true
authors.workspace = true
description = "A powerful, lightweight reactive framework."
repository.workspace = true
documentation = "https://docs.rs/nami"
homepage.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[badges]
maintenance = { status = "actively-developed" }
license = { file = "LICENSE" }

[dev-dependencies]
nami-derive = { workspace = true }

[dependencies]
log = { version = "0.4.28", default-features = true }
nami-derive = { workspace = true, optional = true}
futures-core = "0.3.31"
pin-project-lite = "0.2.16"
executor-core = { version = "0.6.0", default-features = false }
async-channel = { version = "2.5.0", default-features = false }
nami-core.workspace = true
num-traits = { version = "0.2.19",  default-features = false }

[features]
std = ["executor-core/std","nami-core/std"]
default = ["derive", "timer"]
timer = ["std","dep:async-io","dep:gloo-timers"]
derive = ["dep:nami-derive"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-io = { version = "2.6.0", optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"], optional = true }

[workspace.lints]
rust.missing_docs = "warn"
rust.missing_debug_implementations = "warn"
clippy.all = "warn"
clippy.style = "warn"
clippy.correctness = "warn"
clippy.complexity = "warn"
clippy.suspicious = "warn"
clippy.perf = "warn"
clippy.pedantic = "warn"
clippy.nursery = "warn"
clippy.cargo = "warn"
clippy.multiple_crate_versions =  { level = "allow", priority = 1 }

[lints]
workspace = true
