[package]
name = "nami-core"
version = "0.3.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
[dependencies]

[lints]
workspace = true

[features]
default = ["std"]
std = []