[package]
name = "nami-derive"
version = "0.1.0"
edition = "2021"
authors = ["Lexo Liu <me@lexo.cool>"]
description = "Derive macros for the nami reactive framework"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"