[package]
name = "nami-derive"
version = "0.2.0"
edition = "2021"
authors = ["Lexo Liu <me@lexo.cool>"]
description = "Derive macros for the nami reactive framework"
repository = "https://github.com/water-rs/nami"
documentation = "https://docs.rs/nami-derive"
homepage = "https://github.com/water-rs/nami"
license = "MIT"
keywords = ["reactive", "derive", "macro", "procedural", "binding"]
categories = ["rust-patterns", "development-tools::procedural-macro-helpers"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[lints]
workspace = true
